docs(openblas): record blocked direct BF16 route